--- a/combined.html
+++ b/combined.html
@@ -1,25 +1,5 @@
 <!-- NESIA DARKNET MASTER STEALER - telebotfreebyranggacloudcs.vercel.app -->
-<!-- Source: https://telebotfreebyranggacloudcs.vercel.app/ -->
-<!-- Stolen with love 😈 -->
-
-<!-- ========== ORIGINAL HTML ========== -->
-<!DOCTYPE html>
-
-<html lang="id">
-<head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" name="viewport"/>
-<title>TELEGRAM BOT ADMIN</title>
-<script src="https://cdn.tailwindcss.com"></script>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
-<style>
-        :root { --bg: #0e1621; --side: #17212b; --acc: #3390ec; --in: #182533; --out: #2b5278; }
-        body { background: var(--bg); color: #fff; font-family: -apple-system, sans-serif; margin: 0; height: 100dvh; overflow: hidden; }
-        .sidebar { width: 350px; background: var(--side); border-right: 1px solid #000; display: flex; flex-direction: column; z-index: 100; }
-        .main-chat { flex: 1; display: flex; flex-direction: column; background: var(--bg); position: relative; height: 100dvh; }
-        @media (max-width: 768px) { .sidebar { width: 100%; position: absolute; height: 100%; } .main-chat { width: 100%; position: absolute; transform: translateX(100%); transition: 0.3s; z-index: 200; } .is-chatting .main-chat { transform: translateX(0); } }
-        .msg-container { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; background: url('https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png'); background-blend-mode: overlay; padding-bottom: 120px; }
-        .bubble { max-width: 85%; padding: 8px 12px; border-radius: 15px; font-size: 15px; position: relative; box-shadow: 0 1px 2px rgba(0,0,0,0.3); transition: transform 0.15s ease-out; cursor: default; touch-action: pan-y; }
+<!-
         .bubble.in { background: var(--in); align-self: flex-start; border-bottom-left-radius: 4px; }
         .bubble.out { background: var(--out); align-self: flex-end; border-bottom-right-radius: 4px; }
         .sender-name { font-size: 12px; font-weight: bold; color: #3390ec; margin-bottom: 2px; display: block; }
@@ -33,12 +13,7 @@
         .drawer.active { transform: translateX(0); }
         #reply-bar { display: none; background: rgba(255,255,255,0.05); padding: 5px 15px; border-bottom: 1px solid rgba(255,255,255,0.1); justify-content: space-between; align-items: center; }
         #ctx-menu, #header-menu { position: fixed; display: none; background: #1c2b3a; border-radius: 12px; z-index: 3000; width: 220px; box-shadow: 0 10px 40px #000; overflow: hidden; }
-        .menu-item { padding: 12px 16px; font-size: 13px; display: flex; align-items: center; gap: 12px; cursor: pointer; border-bottom: 1px solid rgba(255,255,255,0.03); }
-        .media-content { border-radius: 10px; margin-top: 5px; max-width: 100%; display: block; }
-        #fwd-modal { display:none; position:fixed; inset:0; background:rgba(0,0,0,0.8); z-index:4000; align-items:center; justify-content:center; }
-        .pfp-img { width: 100%; height: 100%; border-radius: 50%; object-fit: cover; }
-        .unread-badge { background: #3390ec; color: #fff; font-size: 10px; padding: 2px 6px; border-radius: 10px; min-width: 20px; text-align: center; font-weight: bold; }
-        .status-icon { font-size: 10px; margin-left: 4px; vertical-align: middle; color: #4fc3f7; }
+        .menu-item { padding: 12px 16px; font-size: 13px; display: flex; align-items: rtical-align: middle; color: #4fc3f7; }
     </style>
 </head>
 <body>
